# ThetaSweepModelling

./: LICENSE  README.md  plotting.py  pyproject.toml  thetasweep_HD.ipynb
notebooks/: thetasweep_GC.ipynb  thetasweep_HD.ipynb  thetasweep_PC_Tmaze.ipynb
sweep/: network_models.py  plotting.py
theta_sweep/: __init__.py  network_models.py  plotting.py
